# ffmpegSimplePlayer

./: .gitignore  local.properties
app/: build.gradle
app/jni/: CMakeLists.txt
app/jni/SDL2/: CMakeLists.txt
app/jni/SDL2/include/: SDL_config_android.h
app/jni/SDL2/src/core/android/: SDL_android.c
app/jni/SDL2_image/: CMakeLists.txt
app/jni/SDL2_mixer/: CMakeLists.txt
app/jni/ffmpeg/6.0.1/arm64-v8a/lib/pkgconfig/: libavcodec.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
app/jni/ffmpeg/6.0.1/armeabi-v7a/lib/pkgconfig/: libavcodec.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
app/jni/ffmpeg/7.0.1/arm64-v8a/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc
app/jni/ffmpeg/7.0.1/armeabi-v7a/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc
app/jni/ffmpeg_simple_player/: AudioDecodeThread.cpp  AudioDecodeThread.h  AudioPlay.cpp  AudioPlay.h  DemuxThread.cpp  DemuxThread.h  FFmpegPlayer.cpp  FFmpegPlayer.h  PacketQueue.cpp  PacketQueue.h  RenderView.cpp  RenderView.h  SDLApp.cpp  SDLApp.h  ThreadBase.cpp  ThreadBase.h  Timer.cpp  Timer.h  VideoDecodeThread.cpp  VideoDecodeThread.h  ffmpeg_simple_player.cpp
app/jni/src/: CMakeLists.txt  animated_sprites.cpp  main.cpp  play_music.cpp  test2_1.cpp  test3_1.cpp  test4_1.cpp  test5_1.cpp  test5_2.cpp  test6_1.cpp  true_type_fonts.cpp  ttf_test.cpp
app/jni/util/: alog.h
app/src/main/java/org/libsdl/app/: AssectsUtil.java  SDLActivity.java
